--- a/src/Hinata/Content/Site.css
+++ b/src/Hinata/Content/Site.css
@@ -1,24 +1,72 @@
 ﻿/* Sticky footer styles
 -------------------------------------------------- */
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 body {
-  /* Margin bottom by footer height */
-  margin-bottom: 60px;
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
 }
 .footer {
-  position: absolute;
-  bottom: 0;
-  width: 100%;
-  /* Set the fixed height of the footer here */
-  height: 60px;
-  background-color: #f5f5f5;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
 }
 
 body {
     font-family: "ヒラギノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro",Osaka, "メイリオ", Meiryo, "ＭＳ Ｐゴシック", "MS PGothic", sans-serif;
+}
+
+.main-area {
+    margin-top: 22px;
+}
+
+    .main-area .list-group-item {
+        border-left: none;
+        border-right: none;
+        -ms-border-radius: 0;
+        border-radius: 0;
+    }
+
+        .main-area .list-group-item:first-child {
+            border-top: none;
+        }
+
+.tag {
+    position: relative;
+    display: inline-block;
+    font-size: 12px;
+    padding: 0 4px;
+    background: #B0A9BC;
+    color: #FFFFFF;
+    -ms-border-radius: 2px;
+    border-radius: 2px;
+    height: 14px;
+    line-height: 14px;
+    vertical-align: middle;
+    margin-left: 7px;
+}
+.tag:before {
+    display: block;
+    position: absolute;
+    content: ' ';
+    text-indent: -10000;
+    width: 1px;
+    height: 1px;
+    border-style: solid;
+    border-color: transparent #B0A9BC transparent transparent;
+    border-width: 7px;
+    left: -13px;
+}
+
+.item-meta-info {
+    margin: 6px 0 0;
+    font-size: 12px;
+    color: #909090;
 }
 
 textarea.markdown-editor {
@@ -36,22 +84,22 @@ textarea.markdown-editor {
 }
 
 div.file {
-  display: inline-block;
-  overflow: hidden;
-  position: relative;
-  padding: .5em;
+    display: inline-block;
+    overflow: hidden;
+    position: relative;
+    padding: .5em;
 }
 
-div.file input[type="file"] {
-  opacity: 0;
-  filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
-  position: absolute;
-  right: 0;
-  top: 0;
-  margin: 0;
-  font-size: 100px;
-  cursor: pointer;
-}
+    div.file input[type="file"] {
+        opacity: 0;
+        filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin: 0;
+        font-size: 100px;
+        cursor: pointer;
+    }
 
 .item-editor {
     border: none;
@@ -59,6 +107,10 @@ div.file input[type="file"] {
     max-height: 450px;
     min-height: 450px;
     resize: none;
+}
+
+.item-view p {
+    line-height: 1.6;
 }
 
 .item-view img {
