記事が特定以上の長さになるとプレビューされなくなる問題を修正。

--- a/src/Hinata/Views/Draft/Edit.cshtml
+++ b/src/Hinata/Views/Draft/Edit.cshtml
@@ -135,7 +135,7 @@
             data.markdown = editorArea.value;
             $.ajax({
                 url: "@Url.Action("Transform", "Draft")",
-                type: "GET",
+                type: "POST",
                 dataType: "html",
                 data: data,
                 success: function (html) {
