Markdown記事のスタイルを変更。文字を大きくして読みやすくする

--- a/src/Hinata/Views/Draft/Edit.cshtml
+++ b/src/Hinata/Views/Draft/Edit.cshtml
@@ -52,7 +52,7 @@
                 <div class="panel panel-default">
                     <div class="panel-heading">Preview</div>
                     <div class="panel-body" style="max-height: 500px; min-height: 500px; overflow-y: auto; overflow-x: hidden; padding: 0;">
-                        <div id="item-view" class="item-view" style="padding: 10px;">
+                        <div id="item-view" class="item-view markdown-body" style="padding: 10px;">
                         </div>
                     </div>
                 </div>
