--- a/src/Hinata/Views/Draft/_DraftPreviewPartial.cshtml
+++ b/src/Hinata/Views/Draft/_DraftPreviewPartial.cshtml
@@ -13,7 +13,7 @@
                 <span>@tagversion</span>
             }
         </div>
-        <div class="panel-body item-view">
+        <div class="panel-body item-view markdown-body">
             @Html.Raw(@Model.Html)
         </div>
     </div>
