--- a/src/Hinata/Content/Site.css
+++ b/src/Hinata/Content/Site.css
@@ -117,3 +117,9 @@ div.file {
     max-width: 100%;
     height: auto;
 }
+
+.markdown-body {
+    min-width: 200px;
+    margin: 0 auto;
+    padding: 30px;
+}
