--- a/src/Hinata/Views/Item/Index.cshtml
+++ b/src/Hinata/Views/Item/Index.cshtml
@@ -19,7 +19,7 @@
         }
     </div>
     <div class="panel panel-default">
-        <div class="panel-body item-view">
+        <div class="panel-body item-view markdown-body">
             @Html.Raw(Model.Html)
         </div>
     </div>
